# trisurf-ng

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  build.sh  config.h  config.h.in  config.status  configure  configure.ac  missing
doc/: doxygen.conf
python/: .parse_vtu.py.swp  MANIFEST.in  myTestConfig.py  networkedExample.py  paramikoTest.py  parse_vtu.py  pythonvtk.py  setup.py  tape  tsmgr
python/trisurf/: .trisurf.py.swp  Remote.py  VTKRendering.py  WebTrisurf.py  statistics.py  trisurf.py  tsmgr.py
sample_tapes/: tape
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bond.c  bond.h  bondflip.c  bondflip.h  cell.c  cell.h  cluster.c  cluster.h  co_test.c  constvol.c  constvol.h  dumpstate.c  dumpstate.h  energy.c  energy.h  frame.c  frame.h  general.c  general.h  initial_distribution.c  initial_distribution.h  initial_timestep.c  initial_timestep.h  io.c  io.h  main.c  neigh_test.c  poly.c  poly.h  restore.c  restore.h  sh.c  sh.h  shcomplex.c  shcomplex.h  shdiscover.c  (+19 more)
test/: Makefile  Makefile.am  Makefile.in  co.for  confusetest.c  doxygentest.c  float3cmp.c  parsecmdline.c
